[revision] opraveny překlepy, skloňování a teorie

--- a/gymnastika/cviceni.html
+++ b/gymnastika/cviceni.html
@@ -135,7 +135,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
       <div class="modal-content">
         <div class="modal-header p-4">
-          <h3 class="modal-title h5">Kolebká 1</h3>
+          <h3 class="modal-title h5">Kolébka 1</h3>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -169,7 +169,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
       <div class="modal-content">
         <div class="modal-header p-4">
-          <h3 class="modal-title h5">Kolebká 2</h3>
+          <h3 class="modal-title h5">Kolébka 2</h3>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -646,7 +646,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
       <div class="modal-content">
         <div class="modal-header p-4">
-          <h3 class="modal-title h5">Nácvik přemetu sranou přes lavičku</h3>
+          <h3 class="modal-title h5">Nácvik přemetu stranou přes lavičku</h3>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
