--- a/gymnastika/technika.html
+++ b/gymnastika/technika.html
@@ -85,9 +85,9 @@
           <p>Na videu sledujte:</p>
           <ul>
             <li>plynulost pohybu, dostatečné sbalení hlavy a celého trupu;</li>
-            <li>opora o dlaně v první fázi kotoulu;</li>
+            <li>oporu o dlaně v první fázi kotoulu;</li>
             <li>provedení skrčmo či schylmo, obě varianty považujeme za správné;</li>
-            <li>druhá fáze kotoulu bez opory o dlaně, dolní končetiny u sebe.</li>
+            <li>druhou fázi kotoulu bez opory o dlaně, dolní končetiny u sebe.</li>
           </ul>
           <figure class="figure mx-auto d-block w-75 py-4">
             <video class="rounded img-fluid" controls muted>
@@ -114,8 +114,8 @@
           <p>Na videu sledujte:</p>
           <ul>
             <li>plynulost pohybu, dostatečné sbalení hlavy a celého trupu;</li>
-            <li>příprava paží dle popisu techniky v první fázi;</li>
-            <li>dostatečná energie pro přetáčivý pohyb a vzpíravou práci paží;</li>
+            <li>přípravu paží dle popisu techniky v první fázi;</li>
+            <li>dostatečnou energii pro přetáčivý pohyb a vzpíravou práci paží;</li>
             <li>dokončení kotoulu do dřepu bez dotyku kolen.</li>
           </ul>
           <figure class="figure mx-auto d-block w-75 py-4">
@@ -139,7 +139,7 @@
           <ul>
             <li>zpevněný trup, natažené HK i DK;</li>
             <li>výdrž 2–3 s;</li>
-            <li>zanožená DK tvoří s trupem přímku;</li>
+            <li>zanoženou DK tvořící s trupem přímku;</li>
             <li>plynulost provedení tam i zpět.</li>
           </ul>
           <figure class="figure mx-auto d-block w-75 py-4">
