[added] form creator manual

--- a/plochonozi/diagnostika.html
+++ b/plochonozi/diagnostika.html
@@ -127,7 +127,7 @@
 							</figure>
 						</div>
 					</div>
-					<figcaption class="figure-caption pb-4"><strong>Obrázek 1–4</strong> Plantogram pomocí inkoustového
+					<figcaption class="figure-caption text-center pb-4"><strong>Obrázek 1–4</strong> Plantogram pomocí inkoustového
 						plantografu</figcaption>
 					<div class="row">
 						<div class="col-lg-3">
@@ -368,7 +368,7 @@
 									</figure>
 								</div>
 							</div>
-							<figcaption class="figure-caption pb-4"><strong>Obrázek 10–13</strong> Naskenování otisku
+							<figcaption class="figure-caption text-center pb-4"><strong>Obrázek 10–13</strong> Naskenování otisku
 								chodidla pomocí mobilní
 								aplikace Microsoft Office Lens
 							</figcaption>
