--- a/gymnastika/cviceni.html
+++ b/gymnastika/cviceni.html
@@ -36,7 +36,7 @@
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
                 <a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
                 <a class="dropdown-item" href="technika.html">Technika provedení</a>
-                <a class="dropdown-item" href="hodnoceni.html">Hodnocení</a>
+                <a class="dropdown-item" href="hodnoceni.html">Hodnocení gymnastického projevu</a>
                 <a class="dropdown-item" href="cviceni.html">Průpravná cvičení</a>
               </div>
             </li>
@@ -879,7 +879,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 py-1">
-          <p class="text-white-50 text-lg-left text-center">Naposledy aktualizováno 05.10.2019</p>
+          <p class="text-white-50 text-lg-left text-center">Naposledy aktualizováno 12.10.2019</p>
           <p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
               href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white">Podpora
               rozvoje digitální gramotnosti</a>
