--- a/gymnastika/index.html
+++ b/gymnastika/index.html
@@ -36,7 +36,7 @@
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
                                     <a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
                                     <a class="dropdown-item" href="technika.html">Technika provedení</a>
-                                    <a class="dropdown-item" href="hodnoceni.html">Hodnocení</a>
+                                    <a class="dropdown-item" href="hodnoceni.html">Hodnocení gymnastického projevu</a>
                                     <a class="dropdown-item" href="cviceni.html">Průpravná cvičení</a>
                                 </div>
                             </li>
@@ -77,7 +77,7 @@
                 <!-- wrap every 2 on sm-->
                 <a href="hodnoceni.html" class="card border-dark shadow-sm d-flex custom-card">
                     <div class="card-body d-flex align-items-center justify-content-center">
-                        <h5 class="card-title text-center">Hodnocení</h5>
+                        <h5 class="card-title text-center">Hodnocení gymnastického projevu</h5>
                     </div>
                     <small class="card-footer text-right">Tvorba formuláře</small>
                 </a>
@@ -103,7 +103,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 py-1">
-                        <p class="text-white-50 text-lg-left text-center">Naposledy aktualizováno 05.10.2019</p>
+                        <p class="text-white-50 text-lg-left text-center">Naposledy aktualizováno 12.10.2019</p>
                         <p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
                                 href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white">Podpora
                                 rozvoje digitální gramotnosti</a>
