[revision] metodický list, hodnocení

--- a/gymnastika/hodnoceni.html
+++ b/gymnastika/hodnoceni.html
@@ -121,7 +121,7 @@
 						<li><a href="https://forms.office.com/">Microsoft Forms</a></li>
 						<li><a href="https://www.survio.com/cs/">Survio</a></li>
 					</ul>
-					<p>Jednoduché dotazníky můžete také tvořit např. na sociálních sítí (Facebook).</p>
+					<p>Jednoduché dotazníky můžete také tvořit např. na sociálních sítích (Facebook).</p>
 
 					<h3 class="h4 pt-4" id="item-3">Tvorba formuláře pomocí Google Forms</h3>
 					<hr class="my-4">
