[revision] Úprava atletiky – nová aplikace

--- a/atletika/diagnostika.html
+++ b/atletika/diagnostika.html
@@ -60,9 +60,9 @@
 				<div class="col-lg-12">
 					<h3 class="h4 pt-4" id="item-1">Postup</h3>
 					<hr class="my-4">
-					<p>Coach's Eye je platforma pro trenéry a sportovce, kteří potřebují přezkoumat techniku atletů. Je
+					<p>Virtual Pro je platforma pro trenéry a sportovce, kteří potřebují přezkoumat techniku atletů. Je
 						vhodná pro analýzu videa, které se natočí na mobilní telefon nebo tablet. Je volně <a
-							href="https://play.google.com/store/apps/details?id=com.techsmith.apps.coachseye.free&hl=cs">dostupná
+							href="https://play.google.com/store/apps/details?id=com.wilke.virtualpro">dostupná
 							ke stažení</a> v základní verzi na Google Play.</p>
 
 
@@ -72,23 +72,13 @@
 						</div>
 						<div class="card-body">
 							<p>Stáhněte si aplikaci <a
-								href="https://play.google.com/store/apps/details?id=com.techsmith.apps.coachseye.free&hl=cs">Coach's Eye</a> do svého mobilního telefonu nebo tabletu.</p>
-						</div>
-					</div>
-
-					<div class="card border-dark shadow-sm d-flex mt-4">
-						<div class="card-header">
-							<h5 class="h6 mb-0">2. krok</h5>
-						</div>
-						<div class="card-body">
-							<p>Po otevření aplikace můžete zmáčknutím <mark>zelené ikony fotoaparátu</mark> nahrát video
-								nebo otevřít video nahrané z paměti telefonu
-								(Obr. 1).</p>
+									href="https://play.google.com/store/apps/details?id=com.wilke.virtualpro">Virtual
+									Pro</a> do svého mobilního telefonu nebo tabletu.</p>
 							<figure class="figure mx-auto d-block w-25 py-4">
-								<a class="lightbox-style" href="imgs/navod-2.jpg" data-lightbox="aplikace"
-									data-title="2. krok – Nahrát/otevřít video">
+								<a class="lightbox-style" href="imgs/navod-1.jpg" data-lightbox="aplikace"
+									data-title="1. krok – Stažení Virtual Pro">
 									<img src="imgs/navod-2.jpg" class="figure-img img-fluid rounded mx-auto d-block"
-										alt="2. krok – Nahrát/otevřít video">
+										alt="1. krok – Stažení Virtual Pro">
 								</a>
 								<figcaption class="figure-caption text-center"><strong>Obrázek 1</strong></figcaption>
 							</figure>
@@ -97,18 +87,58 @@
 
 					<div class="card border-dark shadow-sm d-flex mt-4">
 						<div class="card-header">
+							<h5 class="h6 mb-0">2. krok</h5>
+						</div>
+						<div class="card-body">
+							<p>Po otevření aplikace můžete zmáčknutím <mark>RECORD</mark> nahrát video (Obr. 2) nebo otevřít video nahrané z paměti telefonu zmáčknutím ikony <mark>IMPORT</mark> (Obr. 3).</p>
+							<div class="row justify-content-center">
+								<div class="col-lg-3">
+									<figure class="figure mx-auto d-block pt-4">
+										<a class="lightbox-style" href="imgs/navod-2.jpg" data-lightbox="aplikace"
+											data-title="2. krok – Tlačítko RECORD">
+											<img src="imgs/navod-2.jpg"
+												class="figure-img img-fluid rounded mx-auto d-block"
+												alt="2. krok – Tlačítko RECORD">
+										</a>
+									</figure>
+								</div>
+								<div class="col-lg-3">
+									<figure class="figure mx-auto d-block pt-4">
+										<a class="lightbox-style" href="imgs/navod-3.jpg" data-lightbox="aplikace"
+											data-title="3. krok – Tlačítko IMPORT">
+											<img src="imgs/navod-3.jpg"
+												class="figure-img img-fluid rounded mx-auto d-block"
+												alt="3. krok – Tlačítko IMPORT">
+										</a>
+									</figure>
+								</div>
+							</div>
+							<figcaption class="figure-caption text-center pb-4"><strong>Obrázek 2–3</strong>
+							</figcaption>
+						</div>
+					</div>
+
+					<div class="card border-dark shadow-sm d-flex mt-4">
+						<div class="card-header">
 							<h5 class="h6 mb-0">3. krok</h5>
 						</div>
 						<div class="card-body">
-							<p>Pro nahrávání videa zmáčkněte ikonu <mark>Camera</mark>, pro import již nahraného videa z
-								paměti telefonu zmáčkněte ikonu <mark>Import</mark> (Obr. 2).</p>
+							<p>Po nahrání se video zobrazí rovnou v analýze (Obr. 4). Pokud chcete analyzovat již nahraného videa z paměti telefonu zmáčkněte ikonu <mark>ANALYZE</mark> (Obr. 5).</p>
+							<figure class="figure mx-auto d-block w-25 py-4">
+								<a class="lightbox-style" href="imgs/navod-4.jpg" data-lightbox="aplikace"
+									data-title="3. krok – Analýza videa (po natočení videa)">
+									<img src="imgs/navod-4.jpg" class="figure-img img-fluid rounded mx-auto d-block"
+										alt="3. krok – Analýza videa (po natočení videa)">
+								</a>
+								<figcaption class="figure-caption text-center"><strong>Obrázek 4</strong></figcaption>
+							</figure>
 							<figure class="figure mx-auto d-block w-25 py-4">
 								<a class="lightbox-style" href="imgs/navod-5.jpg" data-lightbox="aplikace"
-									data-title="3. krok – Camera/import tlačítka">
+									data-title="3. krok – Analýza videa (po importu videa)">
 									<img src="imgs/navod-5.jpg" class="figure-img img-fluid rounded mx-auto d-block"
-										alt="3. krok – Camera/import tlačítka">
+										alt="3. krok – Analýza videa (po importu videa)">
 								</a>
-								<figcaption class="figure-caption text-center"><strong>Obrázek 2</strong></figcaption>
+								<figcaption class="figure-caption text-center"><strong>Obrázek 5</strong></figcaption>
 							</figure>
 						</div>
 					</div>
@@ -118,14 +148,14 @@
 							<h5 class="h6 mb-0">4. krok</h5>
 						</div>
 						<div class="card-body">
-							<p>Nahrajte spolužáka při běhu pomocí červeného tlačítka (Obr. 3).</p>
+							<p>Použijte dostupné nástroje k analýze techniky (Obr. 6).</p>
 							<figure class="figure mx-auto d-block w-50 py-4">
 								<a class="lightbox-style" href="imgs/navod-6.jpg" data-lightbox="aplikace"
-									data-title="4. krok – Nahrajte spolužáka při běhu pomocí červeného tlačítka">
+									data-title="4. krok – Dostupné nástroje k analýze techniky">
 									<img src="imgs/navod-6.jpg" class="figure-img img-fluid rounded mx-auto d-block"
-										alt="4. krok – Nahrajte spolužáka při běhu pomocí červeného tlačítka">
+										alt="4. krok – Dostupné nástroje k analýze techniky">
 								</a>
-								<figcaption class="figure-caption text-center"><strong>Obrázek 3</strong></figcaption>
+								<figcaption class="figure-caption text-center"><strong>Obrázek 6</strong></figcaption>
 							</figure>
 						</div>
 					</div>
@@ -133,39 +163,39 @@
 			</div>
 		</div>
 		<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
-							alt="Loga projektu">
+			<div class="row">
+				<div class="col-lg-12">
+					<img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
+						alt="Loga projektu">
+				</div>
+			</div>
+		</div>
+	</main>
+
+	<footer class="footer mt-auto py-3 text-muted bg-dark">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 py-1">
+					<p class="text-white-50 text-lg-left text-center">Naposledy aktualizováno 10.11.2019</p>
+					<p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+							href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white">Podpora
+							rozvoje digitální gramotnosti</a>
+					</p>
+				</div>
+				<div class="col-lg-6 py-1">
+					<div class="d-flex">
+						<div class="w-25 d-flex align-items-center">
+							<a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode"><img src="imgs/by-sa.svg"
+									class="license" alt="Licence BY-SA 4.0"></a>
+						</div>
+						<p class="pl-3 text-white-50">Tento materiál je včetně všech svých
+							částí licencován licencí <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode"
+								class="text-white">Creative Commons BY-SA 4.0</a></p>
 					</div>
 				</div>
 			</div>
-		</main>
-	
-		<footer class="footer mt-auto py-3 text-muted bg-dark">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6 py-1">
-							<p class="text-white-50 text-lg-left text-center">Naposledy aktualizováno 05.10.2019</p>
-							<p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
-									href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white">Podpora
-									rozvoje digitální gramotnosti</a>
-							</p>
-						</div>
-						<div class="col-lg-6 py-1">
-							<div class="d-flex">
-								<div class="w-25 d-flex align-items-center">
-									<a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode"><img src="imgs/by-sa.svg"
-											class="license" alt="Licence BY-SA 4.0"></a>
-								</div>
-								<p class="pl-3 text-white-50">Tento materiál je včetně všech svých
-									částí licencován licencí <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode"
-										class="text-white">Creative Commons BY-SA 4.0</a></p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</footer>
+		</div>
+	</footer>
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
