[revision] úpravy metodického listu

--- a/atletika/diagnostika.html
+++ b/atletika/diagnostika.html
@@ -49,7 +49,7 @@
 		<div class="jumbotron jumbotron-fluid bg-light text-center">
 			<div class="container">
 				<h1 class="display-4">Analýza techniky běhu</h1>
-				<p class="lead text-muted">Postup použití aplikace Coach's Eye</p>
+				<p class="lead text-muted">Postup použití aplikace Virtual Pro</p>
 			</div>
 		</div>
 	</header>
