atletika [autoplay loop removed]

--- a/atletika/cviceni.html
+++ b/atletika/cviceni.html
@@ -189,7 +189,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/a1.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -213,7 +213,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/a2.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -237,7 +237,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/a3.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -261,7 +261,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/a4.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -285,7 +285,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/a5.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -309,7 +309,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/a6.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -333,7 +333,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/a7.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -357,7 +357,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/a8.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -381,7 +381,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/a9.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -405,7 +405,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/a10.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -429,7 +429,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/b1.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -453,7 +453,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/b2.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -477,7 +477,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/b3.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -501,7 +501,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/b4.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -525,7 +525,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/c1.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -549,7 +549,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/c2.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -573,7 +573,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/c3.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -597,7 +597,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/c4.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -621,7 +621,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/c5.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -645,7 +645,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/c6.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -669,7 +669,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/c7.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -693,7 +693,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/d1.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -717,7 +717,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/d2.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -741,7 +741,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/d3.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -765,7 +765,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/d4.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -789,7 +789,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/d5.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -813,7 +813,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/d6.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -837,7 +837,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/d7.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -861,7 +861,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/e1.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -885,7 +885,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/e2.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -909,7 +909,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/e3.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -933,7 +933,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/e4.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -957,7 +957,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/e5.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -981,7 +981,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/f1.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -1005,7 +1005,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/f2.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -1029,7 +1029,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/f3.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -1053,7 +1053,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/f4.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -1077,7 +1077,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/f5.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -1101,7 +1101,7 @@
         <div class="modal-body p-4">
           <div class="row">
             <div class="col-lg-12">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/f6.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
